{{$NEXT}}
   - remove bug in using Params::Validate, addresses
   https://github.com/polettix/App-Easer/issues/11, still no test.

2.007001  2023-03-11 15:20:07 CET
   - Ensure consistent listing of sub-commands when they are auto-loaded from
     modules in @INC via prefixes.

2.007  2023-03-10 21:54:07 CET
   - Fix https://github.com/polettix/App-Easer/issues/6 "Unspecified help for
     main command results in an "unitialized value" error" (thanks DJERIUS for
     reporting)
   - Fix https://github.com/polettix/App-Easer/issues/7 "Calling help on a
     builtin command dies verbosely." (thanks DJERIUS for reporting)
   - Fix https://github.com/polettix/App-Easer/issues/8 "incorrect
     documentation for residual_args' argument" (thanks DJERIUS for reporting)
   - Fix https://github.com/polettix/App-Easer/issues/9 "options with hypens
     are truncated" (thanks DJERIUS for reporting)
   - Fix https://github.com/polettix/App-Easer/issues/10 "Cannot pass dash as a
     residual argument"
   - Make error on unexpected residual args less confusing

2.006  2023-01-05 08:03:54 CET
   - Release after 84 PASSes on CPAN Testers (thanks!)

2.005  2023-01-02 00:36:49 CET
   - Enhance automatic generation of help for options
   - Fix bugs in automatic generation of help for options

2.004  2022-07-16 12:28:13 CEST
   - Release after 90 PASSes on CPAN Testers (thanks!)

2.003  2022-07-15 19:44:31 CEST
   - Accept sub reference for validate
   - Test validation, both with Params::Validate and sub ref

2.002  2022-06-18 18:07:12 CEST
   - Release after 194 PASSes on CPAN Testers (thanks!)

2.001001  2022-06-13 21:06:03 CEST
   - Try to (blindly) address an issue with tests in Strawberry Perl

2.001  2022-06-12 21:39:55 CEST
   - Split into legacy V1 version and new V2 version
   - Huge refactoring
   - Added tests

0.011  2022-02-03 23:58:16 CET
   - Add support for nested children

0.010  2022-01-21 20:27:52 CET
   - Fix typo bugs
   - Small fix in example