@@ -1,6 +1,7 @@
 {{$NEXT}}
-   - remove bug in using Params::Validate, addresses
-   https://github.com/polettix/App-Easer/issues/11, still no test.
+   - Remove bug in using Params::Validate, addresses
+     https://github.com/polettix/App-Easer/issues/11, still no test.
+   - Fix help message for multi-valued defaults
 
 2.007001  2023-03-11 15:20:07 CET
    - Ensure consistent listing of sub-commands when they are auto-loaded from
